tests/valid_inputs/expr_stmt.cpp
// test expression statement

int main() {
	40 + 2;
}
