tests/invalid_inputs/sema/no_viable_overload.cpp

void foo();
void foo(int a);

int main() {
	foo(nullptr);
}
